--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
     body {
       font-family: 'Raleway', sans-serif;
       padding: 20px;
-      background: linear-gradient(120deg, #e0f7fa, #f0f9ff);
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Chemical_structure_background.png/800px-Chemical_structure_background.png');
-      background-size: cover;
+      background: linear-gradient(135deg, #fce4ec, #f8bbd0);
       background-attachment: fixed;
-      background-blend-mode: lighten;
       color: #333;
     }
     h1 {
       margin-bottom: 10px;
       text-align: center;
-      color: #004d40;
+      color: #880e4f;
     }
     .semestre {
       margin-bottom: 30px;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.85);
       border-radius: 10px;
       padding: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -32,7 +29,7 @@
       font-weight: bold;
       font-size: 1.2em;
       margin-bottom: 10px;
-      color: #00695c;
+      color: #ad1457;
     }
     .materias {
       display: flex;
@@ -43,19 +40,19 @@
       padding: 10px 14px;
       border: 2px solid #6c757d;
       border-radius: 10px;
-      background-color: #ffffff;
+      background-color: #fce4ec;
       cursor: pointer;
       transition: all 0.3s ease;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
     }
     .materia:hover {
-      background-color: #f0f8ff;
+      background-color: #f8bbd0;
     }
     .materia.tachada {
-      background-color: #d1e7dd;
-      color: #0f5132;
+      background-color: #f3e5f5;
+      color: #4a148c;
       text-decoration: line-through;
-      border-color: #198754;
+      border-color: #ab47bc;
     }
   </style>
 </head>
@@ -72,28 +69,28 @@ const data = [
     titulo: "Primer semestre",
     materias: [
       "Matemática A", "Química General I", "Introducción a las Ciencias Biológicas I",
-      "Prevención de Riesgos en el Laboratorio", "Optativas y/o electivas"
+      "Prevención de Riesgos en el Laboratorio"
     ]
   },
   {
     titulo: "Segundo semestre",
     materias: [
       "Matemática B", "Matemática C", "Química General II",
-      "Introducción a las Ciencias Biológicas II", "Física 101", "Optativas y/o electivas"
+      "Introducción a las Ciencias Biológicas II", "Física 101"
     ]
   },
   {
     titulo: "Tercer semestre",
     materias: [
       "Química Orgánica 101", "Química Analítica 1", "Química Inorgánica (T)",
-      "Laboratorio de Química Inorgánica", "Física 102", "Fisiología", "Optativas y/o electivas"
+      "Laboratorio de Química Inorgánica", "Física 102", "Fisiología"
     ]
   },
   {
     titulo: "Cuarto semestre",
     materias: [
       "Química Orgánica 102", "Química Analítica 2", "Fisicoquímica 102",
-      "Física 003 (L)", "Fisiopatología", "Introducción al Medicamento", "Optativas y/o electivas"
+      "Física 003 (L)", "Fisiopatología", "Introducción al Medicamento"
     ]
   },
   {
@@ -102,14 +99,14 @@ const data = [
       "Farmacognosia", "Botánica", "Microbiología General (T)",
       "Laboratorio de Análisis Microbiológico", "Inmunología 1",
       "Farmacocinética y Biofarmacia", "Taller de Integración de Ciencias Biológicas y Biomédicas",
-      "UC Área Calidad", "Optativas y/o electivas"
+      "UC Área Calidad"
     ]
   },
   {
     titulo: "Sexto semestre",
     materias: [
       "Química Orgánica 103 (L)", "Química Orgánica 104", "Química Analítica 3",
-      "Fisicoquímica 103", "Bioquímica Opción III", "Optativas y/o electivas"
+      "Fisicoquímica 103", "Bioquímica Opción III"
     ]
   },
   {
@@ -117,26 +114,26 @@ const data = [
     materias: [
       "Química Farmacéutica 101- Teórico", "Química Farmacéutica 102- Práctico",
       "Farmacotecnia 1", "Inmunología 2", "Bromatología y Nutrición",
-      "Farmacología", "Optativas y/o electivas"
+      "Farmacología"
     ]
   },
   {
     titulo: "Octavo semestre",
     materias: [
       "Farmacoterapia", "Farmacotecnia 2", "Control de Calidad de Medicamentos I",
-      "Toxicología Fundamental", "Optativas y/o electivas"
+      "Toxicología Fundamental"
     ]
   },
   {
     titulo: "Noveno semestre",
     materias: [
-      "Legislación y Deontología", "Gestión de Empresas", "Optativas y/o electivas"
+      "Legislación y Deontología", "Gestión de Empresas"
     ]
   },
   {
     titulo: "Décimo semestre",
     materias: [
-      "Practicantado", "Optativas y/o electivas"
+      "Practicantado"
     ]
   }
 ];
